--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -199,6 +199,7 @@ bind l select-pane -R
 bind -n C-z resize-pane -Z
 bind a setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
 
+bind ] run-shell "filepath=/tmp/tmux-buffer/$(date +'%Y-%m-%d_%H-%M-%S'); mkdir -p $(dirname \$filepath) && tmux capture-pane -pS - > \$filepath && tmux display-message \"Pane captured to \$filepath\""
 
 
 # ------------------------------------------------------------------------------------------
