--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -148,8 +148,8 @@ set -g renumber-windows on   # renumber all windows when any window is closed
 set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
 
-set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#7BBEF7,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7BBEF7,bold] #(whoami) #[fg=#7BBEF7,bg=#002b36]"
-set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75] #{prefix_highlight} #{?window_zoomed_flag,#[fg=red]Zoomed#[default],Not Zoomed}#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83] #[fg=#BAC3C3,bg=#657b83,nobold,nounderscore,noitalics]#{?client_prefix,#[fg=#82EA94],}#[fg=#15161E,bg=#BAC3C3,bold]#{?client_prefix,#[bg=#82EA94],} #(echo #{pane_current_path} | sed 's#$HOME#~#g') "
+# set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#7BBEF7,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7BBEF7,bold] #(whoami) #[fg=#7BBEF7,bg=#002b36]"
+# set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75] #{prefix_highlight} #{?window_zoomed_flag,#[fg=red]Zoomed#[default],Not Zoomed}#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83] #[fg=#BAC3C3,bg=#657b83,nobold,nounderscore,noitalics]#{?client_prefix,#[fg=#82EA94],}#[fg=#15161E,bg=#BAC3C3,bold]#{?client_prefix,#[bg=#82EA94],} #(echo #{pane_current_path} | sed 's#$HOME#~#g') "
 # set -g status-left "#[fg=blue,bold,bg=#1e1e2e]  #S  "
 # set -g status-right "#[fg=#b4befe,bold,bg=#1e1e2e]%a %Y-%m-%d 󱑒 %l:%M %p"
 
@@ -162,7 +162,7 @@ set -g status-position top       # macOS / darwin style
 set -g status-style 'bg=#1e1e2e' # transparen#
 
 # set -g window-status-current-format '#[fg=magenta,bg=#1e1e2e]*#I #W#{?window_zoomed_flag,(),} '
-setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#6EA78E,bg=#eee8d5] #I #[fg=#eee8d5,bg=#6EA78E] #W #[fg=#6EA78E,bg=#002b36,nobold]'
+# setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#6EA78E,bg=#eee8d5] #I #[fg=#eee8d5,bg=#6EA78E] #W #[fg=#6EA78E,bg=#002b36,nobold]'
 
 set -g window-status-format '#[fg=gray,bg=#1e1e2e] #I #W'
 set -g window-status-last-style 'fg=white,bg=black'
@@ -196,8 +196,10 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind -n C-z resize-pane -Z
+bind -n C-M-z resize-pane -Z
+unbind C-z
 bind a setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
+
 
 bind ] run-shell "filepath=/tmp/tmux-buffer/$(date +'%Y-%m-%d_%H-%M-%S'); mkdir -p $(dirname \$filepath) && tmux capture-pane -pS - > \$filepath && tmux display-message \"Pane captured to \$filepath\""
 
@@ -276,6 +278,17 @@ set -g @catppuccin_window_middle_separator "█ "
 # yank to system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
 
+# easy-motion
+set -g @plugin 'IngoMeyer441/tmux-easy-motion'
+set -g @easy-motion-prefix "Space"
+set -g @easy-motion-auto-begin-selection "true"
+
+
+set -g @plugin 'ddzero2c/tmux-easymotion'
+
+bind-key -T copy-mode-vi C-v send-keys -X begin-selection \; send-keys -X rectangle-toggle;
+bind-key -T copy-mode-vi v send-keys -X begin-selection;
+bind-key -T copy-mode-vi V send-keys -X select-line;
 
 # Removed Plugins
 # I wanan not use vim keybind at tmux
