--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1555,7 +1555,7 @@ background_opacity 0.9
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1618,7 +1618,7 @@ background_opacity 0.9
 #: the macOS global menu bar. Values less than one means that there is
 #: no maximum limit.
 
-# macos_custom_beam_cursor no
+macos_custom_beam_cursor yes
 
 #: Use a custom mouse cursor for macOS that is easier to see on both
 #: light and dark backgrounds. Nowadays, the default macOS cursor
