--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -227,6 +227,20 @@ bind -n C-M-j select-pane -D
 bind -n C-M-k select-pane -U
 bind -n C-M-l select-pane -R
 
+# move pane to the far right/left/bottom/top
+bind H splitw -fhb \; swapp -t ! \; killp -t !
+#              │││    ├────────┘    ├───────┘
+#              │││    │             └ kill the previous pane
+#              │││    └ exchange the previous original pane with the current one
+#              ││└ the new pane should be created to the left of or above target-pane
+#              │└ full window height
+#              └ creates a new pane spanning the full window height (with -h)
+#                or full window width (with -v), instead of splitting the active pane
+bind L splitw -fh  \; swapp -t ! \; killp -t !
+bind J splitw -fv  \; swapp -t ! \; killp -t !
+bind K splitw -fvb \; swapp -t ! \; killp -t !
+
+
 bind -n C-M-y resize-pane -L 18
 bind -n C-M-u resize-pane -D 12
 bind -n C-M-i resize-pane -U 12
