--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2409,5 +2409,36 @@ macos_custom_beam_cursor yes
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
-include current-theme.conf
+# include current-theme.conf
 # END_KITTY_THEME
+
+
+# Base colors
+background #161616
+foreground #f2f4f8
+selection_background #2a2a2a
+selection_foreground #f2f4f8
+cursor #f2f4f8
+
+# Normal colors
+color0 #282828
+color1 #ee5396
+color2 #25be6a
+color3 #08bdba
+color4 #78a9ff
+color5 #be95ff
+color6 #33b1ff
+color7 #dfdfe0
+
+# Bright colors
+color8 #484848
+color9 #f16da6
+color10 #46c880
+color11 #2dc7c4
+color12 #8cb6ff
+color13 #c8a5ff
+color14 #52bdff
+color15 #e4e4e5
+
+# Extended colors
+color16 #3ddbd9
