--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,134 +1,3 @@
-# # List of plugins
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
-# set-option -g @plugin 'b0o/tmux-autoreload'
-# # deps: https://github.com/eradman/entr
-# set -g @plugin 'laktak/extrakto'
-# set -g @extrakto_insert_key "enter"  # use enter to insert selection
-#
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-# # set -g @plugin 'addisonlynch/tmux-sidebar-plus'
-#
-# # set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
-# # set -g @plugin 'kiyoon/treemux'
-#
-# # Other examples:
-# # set -g @plugin 'github_username/plugin_name'
-# # set -g @plugin 'github_username/plugin_name#branch'
-# # set -g @plugin 'git@github.com:user/plugin'
-# # set -g @plugin 'git@bitbucket.com:user/plugin'
-#
-#
-# setw -g window-active-style fg='#ebedef'
-# setw -g window-style fg='#a6a6a6'
-#
-#
-# # prefixキーをC-aに変更
-# set -g prefix C-s
-# # C-bのキーバインドを解除
-# unbind C-b
-#
-# # Copy mode
-# setw -g mode-keys vi
-#
-# bind a setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
-#
-#
-# # prefix+\でペインを垂直分割する
-# bind v split-window -h
-#
-# # prefix+-でペインを水平分割する
-# bind s split-window -v
-#
-# unbind o
-# unbind i
-# # ペインをリサイズする
-# bind -r y resize-pane -L 18
-# bind -r u resize-pane -D 12
-# bind -r i resize-pane -U 13
-# bind -r o resize-pane -R 18
-#
-# unbind L
-# bind-key H swap-pane -U
-# bind-key L swap-pane -D
-#
-# bind-key r rotate-window
-# bijd-key R rotate-window -D
-#
-# bind-key N swap-window -t +1\; select-window -t +1
-# bind-key P swap-window -t 0\; select-window -t -1
-#
-# # ペインを最大化する
-# bind -n C-z resize-pane -Z
-#
-# # 256色モードを有効にする
-# set-option -g default-terminal "screen-256color"
-#
-# set -ag terminal-overrides ",xterm-256color:Tc"
-# # Undercurl
-# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-# # ステータスラインの色を変更
-# setw -g status-style fg=colour255,bg=colour234
-#
-#
-# # status-leftを非表示にする
-# set -g status-left ""
-# # status-rightを非表示にする
-# set -g status-right ""
-# # window-statusを右寄せにする
-# set -g status-justify right
-#
-# # windowのインデックスを1から始める
-# set -g base-index 1
-#
-# # window-statusの見た目を変更
-# # setw -g window-status-current-format '#[bg=colour2,fg=colour255] #I #W #T'
-# setw -g window-status-format '#[fg=colour242] #I #{}#W '
-# setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#6EA78E,bg=#eee8d5] #I #[fg=#eee8d5,bg=#6EA78E] #W #[fg=#6EA78E,bg=#002b36,nobold]'
-# # マウス操作を有効にする
-# set-option -g mouse on
-#
-# # prefix+r で設定のリロード
-# # bind r source-file ~/.tmux.conf \; display "Reloaded!"
-#
-# set -g mode-style "fg=#eee8d5,bg=#073642"
-#
-# set -g message-style "fg=#eee8d5,bg=#073642"
-# set -g message-command-style "fg=#eee8d5,bg=#073642"
-#
-# # set -g pane-border-format " [ ###P #T ] "
-# set -g pane-border-style "fg=#073642"
-# set -g pane-active-border-style "fg=#eee8d5"
-#
-# set -g status "on"
-# set -g status-interval 1
-# set -g status-justify "left"
-#
-# set -g status-style "fg=#586e75,bg=#073642"
-#
-# set -g status-bg "#003b36"
-#
-# set -g status-left-length "100"
-# set -g status-right-length "100"
-#
-# set -g status-left-style NONE
-# set -g status-right-style NONE
-# # set -g @PATH $(tmux display-message -p "#{pane_current_path}")
-# set -g @PATH $(pwd)
-# set -g status-right "#{@PATH}"
-#
-# set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#7BBEF7,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7BBEF7,bold] #(whoami) #[fg=#7BBEF7,bg=#002b36]"
-# set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75] #{prefix_highlight} #{?window_zoomed_flag,#[fg=red]Zoomed#[default],Not Zoomed}#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83] #[fg=#BAC3C3,bg=#657b83,nobold,nounderscore,noitalics]#{?client_prefix,#[fg=#82EA94],}#[fg=#15161E,bg=#BAC3C3,bold]#{?client_prefix,#[bg=#82EA94],} #(echo #{pane_current_path} | sed 's#$HOME#~#g') "
-#
-# setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
-# setw -g window-status-separator ""
-# setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
-# # setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
-# set-option -g automatic-rename on
-# set-option -g automatic-rename-format '#(basename "#{pane_current_path}")'
-# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
 
 
 # undercurl表示対応
@@ -201,7 +70,7 @@ unbind C-z
 bind a setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
 
 
-bind ] run-shell "filepath=/tmp/tmux-buffer/$(date +'%Y-%m-%d_%H-%M-%S'); mkdir -p $(dirname \$filepath) && tmux capture-pane -pS - > \$filepath && tmux display-message \"Pane captured to \$filepath\""
+# bind ] run-shell "filepath=/tmp/tmux-buffer/$(date +'%Y-%m-%d_%H-%M-%S'); mkdir -p $(dirname \$filepath) && tmux capture-pane -pS - > \$filepath && tmux display-message \"Pane captured to \$filepath\""
 
 
 # ------------------------------------------------------------------------------------------
@@ -258,15 +127,18 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # extract text from the terminal
 set -g @plugin 'laktak/extrakto'
-# set -g @extrakto_popup_size '90,20'
+# set -g @extrakto_split_size "15"
+# set -g @extrakto_clip_tool "xsel --input --cl@extrakto_popup_sizeipboard" # works better for nvim
+set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
+set -g @extrakto_insert_key "enter"  # use enter to insert selection
+set -g @extrakto_fzf_unset_default_opts "true"  # keep our custom FZF_DEFAULT_OPTS
+set -g @extrakto_fzf_header "i c f g" # for small screens shorten the fzf header
+
+set -g @extrakto_popup_size '120,20'
 
 # yank like a easy-motion
 # FIXME: not working
-set -g @plugin 'fcsonline/tmux-thumbs'
-
-# like a Vscode Ctrl+P
-set -g @plugin 'sainnhe/tmux-fzf'
-TMUX_FZF_LAUNCH_KEY="C-p"
+# set -g @plugin 'fcsonline/tmux-thumbs'
 
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'mskelton/tmux-last' # <prefix>t
@@ -280,7 +152,9 @@ set -g @plugin 'omerxx/tmux-sessionx'
 # session management
 set -g @plugin 'sturob/tmux-teleport'
 
-set -g @sessionx-bind 'e'
+set -g @plugin 'b0o/tmux-autoreload'
+set -g @tmux-autoreload-configs '~/.tmux.conf'
+set-option -g @tmux-autoreload-entrypoints '~/.tmux.conf'
 
 # Theme
 set -g @plugin 'catppuccin/tmux'
@@ -289,6 +163,27 @@ set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator "█ "
 
+# セッションの現在位置をstatusに表示するためのmoduleの定義
+# set -g @session_dots_format "#(tmux list-sessions | awk -v current=\"$(tmux display-message -p '#S')\" '{gsub(/:.*$/,\"\"); if ($1 == current) {printf \"#[fg=orange]●#[fg=default] \"} else {printf \"●\"}}')"
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -ag status-right "#{E:@catppuccin_status_session}"
+# set -ag status-right "#{E:@catppuccin_status_uptime}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
+
+# set -g status-right "#{E:@catppuccin_status_application}"
+# set-option -g status-right "#[fg=colour255,bg=colour241] #(tmux list-sessions | awk -v current=\"$(tmux display-message -p '#S')\" '{gsub(/:.*$/,\"\"); if ($1 == current) {printf \"#[fg=orange]●#[fg=default] \"} else {printf \"●\"}}')"
+# set -agF status-right "#{E:@catppuccin_status_kube}"
+
+set -g @plugin 'kiyoon/treemux'
+set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
+set -g @treemux-tree 'e'
+
+
 # yank to system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -296,6 +191,18 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'IngoMeyer441/tmux-easy-motion'
 set -g @easy-motion-prefix "Space"
 set -g @easy-motion-auto-begin-selection "true"
+
+
+# prefix + Shift + P で前（左）に移動
+bind-key -r 'P' swap-window -t -1\; select-window -t -1
+
+# prefix + Shift + N で次（右）に移動
+bind-key -r 'N' swap-window -t +1\; select-window -t +1
+
+# FIXME: not working
+# set -g @plugin 'olimorris/tmux-pomodoro-plus'
+# # set -g @pomodoro_toggle 'm' 
+# set -g status-right "#{pomodoro_status}"
 
 
 set -g @plugin 'ddzero2c/tmux-easymotion'
