--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -124,6 +124,9 @@ bind -n C-M-m resize-pane -Z
 # NOTE: <prefix> + I to install plugins
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
+set -g @tmux-window-switcher-key-binding 'C-g'
+set -g @tmux-window-switcher-width '50%'
+set -g @tmux-window-switcher-height '90%'
 
 # extract text from the terminal
 set -g @plugin 'laktak/extrakto'
@@ -162,6 +165,9 @@ set -g @catppuccin_flavour 'macchiato' # latte, frappe, macchiato, mocha
 set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator "█ "
+
+set -g @plugin 'l-lin/tmux-window-switcher'
+
 
 # セッションの現在位置をstatusに表示するためのmoduleの定義
 # set -g @session_dots_format "#(tmux list-sessions | awk -v current=\"$(tmux display-message -p '#S')\" '{gsub(/:.*$/,\"\"); if ($1 == current) {printf \"#[fg=orange]●#[fg=default] \"} else {printf \"●\"}}')"
@@ -220,8 +226,8 @@ bind-key -T copy-mode-vi V send-keys -X select-line;
 
 run '~/.tmux/plugins/tpm/tpm'
 
-bind -n C-M-t run-shell "sesh connect \"$(
-  sesh list --icons | fzf-tmux -p 80%,70% \
+bind -n C-M-m run-shell "sesh connect \"$(
+  sesh list -t --icons | fzf-tmux -p 80%,70% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
