--- a/home/.yabairc
+++ b/home/.yabairc
@@ -41,11 +41,11 @@ yabai -m config mouse_action2 resize
 
 yabai -m config mouse_drop_action swap
 yabai -m config window_animation_duration 0.1
-yabai -m conifg window_border_width 4
+yabai -m config window_border_width 4
 
 # general space settings
 yabai -m config layout bsp
-yabai -m config top_padding 12
+yabai -m config top_padding 6
 yabai -m config bottom_padding 6
 yabai -m config left_padding 6
 yabai -m config right_padding 6
