--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -189,14 +189,20 @@ set -g @plugin 'kiyoon/treemux'
 set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
 set -g @treemux-tree 'e'
 
+# pick screen url, commit, digetst, etc
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @fingers-key F
+
+# set -g @plugin 'pawel-wiejacha/tmux-picker'
+# set -g PICKER_KEY 'F'
 
 # yank to system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# easy-motion
-set -g @plugin 'IngoMeyer441/tmux-easy-motion'
-set -g @easy-motion-prefix "Space"
-set -g @easy-motion-auto-begin-selection "true"
+# # easy-motion
+# set -g @plugin 'IngoMeyer441/tmux-easy-motion'
+# set -g @easy-motion-prefix "Space"
+# set -g @easy-motion-auto-begin-selection "true"
 
 
 # prefix + Shift + P で前（左）に移動
