--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -68,6 +68,21 @@ bind l select-pane -R
 bind -n C-M-z resize-pane -Z
 unbind C-z
 bind a setw synchronize-panes \; display "synchronize-panes #{?pane_synchronized,on,off}"
+bind Tab run-shell '
+  current_window=$(tmux display-message -p "#{window_id}")
+  last_window=$(tmux display-message -p "#{session_last_attached}")
+  
+  if [ "$(tmux display-message -p "#{window_zoomed_flag}")" = "1" ]; then
+    tmux last-pane
+    tmux resize-pane -Z
+  else
+    if tmux last-pane 2>/dev/null; then
+      :
+    else
+      tmux last-window
+    fi
+  fi
+'
 
 
 # bind ] run-shell "filepath=/tmp/tmux-buffer/$(date +'%Y-%m-%d_%H-%M-%S'); mkdir -p $(dirname \$filepath) && tmux capture-pane -pS - > \$filepath && tmux display-message \"Pane captured to \$filepath\""
@@ -128,16 +143,16 @@ set -g @tmux-window-switcher-key-binding 'C-g'
 set -g @tmux-window-switcher-width '50%'
 set -g @tmux-window-switcher-height '90%'
 
-# extract text from the terminal
-set -g @plugin 'laktak/extrakto'
-# set -g @extrakto_split_size "15"
-# set -g @extrakto_clip_tool "xsel --input --cl@extrakto_popup_sizeipboard" # works better for nvim
-set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
-set -g @extrakto_insert_key "enter"  # use enter to insert selection
-set -g @extrakto_fzf_unset_default_opts "true"  # keep our custom FZF_DEFAULT_OPTS
-set -g @extrakto_fzf_header "i c f g" # for small screens shorten the fzf header
-
-set -g @extrakto_popup_size '120,20'
+# # extract text from the terminal
+# set -g @plugin 'laktak/extrakto'
+# # set -g @extrakto_split_size "15"
+# # set -g @extrakto_clip_tool "xsel --input --cl@extrakto_popup_sizeipboard" # works better for nvim
+# set -g @extrakto_copy_key "tab"      # use tab to copy to clipboard
+# set -g @extrakto_insert_key "enter"  # use enter to insert selection
+# set -g @extrakto_fzf_unset_default_opts "true"  # keep our custom FZF_DEFAULT_OPTS
+# set -g @extrakto_fzf_header "i c f g" # for small screens shorten the fzf header
+#
+# set -g @extrakto_popup_size '120,20'
 
 # yank like a easy-motion
 # FIXME: not working
@@ -185,9 +200,9 @@ set -g status-left ""
 # set-option -g status-right "#[fg=colour255,bg=colour241] #(tmux list-sessions | awk -v current=\"$(tmux display-message -p '#S')\" '{gsub(/:.*$/,\"\"); if ($1 == current) {printf \"#[fg=orange]●#[fg=default] \"} else {printf \"●\"}}')"
 # set -agF status-right "#{E:@catppuccin_status_kube}"
 
-set -g @plugin 'kiyoon/treemux'
-set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
-set -g @treemux-tree 'e'
+# set -g @plugin 'kiyoon/treemux'
+# set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
+# set -g @treemux-tree 'e'
 
 # pick screen url, commit, digetst, etc
 set -g @plugin 'Morantron/tmux-fingers'
@@ -198,6 +213,10 @@ set -g @fingers-key F
 
 # yank to system clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g @plugin 'meithon/tmux-panehop'
+set -g @tmux_panehop_key 'j'
+
 
 # # easy-motion
 # set -g @plugin 'IngoMeyer441/tmux-easy-motion'
@@ -211,6 +230,8 @@ bind-key -r 'P' swap-window -t -1\; select-window -t -1
 # prefix + Shift + N で次（右）に移動
 bind-key -r 'N' swap-window -t +1\; select-window -t +1
 
+source-file ~/.config/zsh/plugin/tmux.zsh
+bind-key -r "C-j" run-shell 'tmux-switch'
 # FIXME: not working
 # set -g @plugin 'olimorris/tmux-pomodoro-plus'
 # # set -g @pomodoro_toggle 'm' 
