--- a/config/kitty/current-theme.conf
+++ b/config/kitty/current-theme.conf
@@ -1,80 +1,67 @@
 # vim:ft=kitty
 
-## name:     Catppuccin-Macchiato
-## author:   Pocco81 (https://github.com/Pocco81)
-## license:  MIT
-## upstream: https://github.com/catppuccin/kitty/blob/main/macchiato.conf
-## blurb:    Soothing pastel theme for the high-spirited!
+## name: Yorumi Shade
+## author: yorumicolors
+## license: GNU General Public License v3.0
+## upstream: https://raw.githubusercontent.com/yorumicolors/kitty/refs/heads/main/yorumi-shade.conf
+## blurb: A more washed off dark flavor of yorumi. Find more @ github/yorumicolors
 
 
+background 											#0F101B
+foreground 											#BDBFCB
 
-# The basic colors
-foreground              #CAD3F5
-background              #24273A
-selection_foreground    #24273A
-selection_background    #F4DBD6
+selection_background            #343742
+selection_foreground            #BDBFCB
 
-# Cursor colors
-cursor                  #F4DBD6
-cursor_text_color       #24273A
 
-# URL underline color when hovering with mouse
-url_color               #F4DBD6
+cursor                          #878996
+cursor_text_color               #060914
 
-# Kitty window border colors
-active_border_color     #B7BDF8
-inactive_border_color   #6E738D
-bell_border_color       #EED49F
 
-# OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
+url_color                       #798DDC
 
-# Tab bar colors
-active_tab_foreground   #181926
-active_tab_background   #C6A0F6
-inactive_tab_foreground #CAD3F5
-inactive_tab_background #1E2030
-tab_bar_background      #181926
 
-# Colors for marks (marked text in the terminal)
-mark1_foreground #24273A
-mark1_background #B7BDF8
-mark2_foreground #24273A
-mark2_background #C6A0F6
-mark3_foreground #24273A
-mark3_background #7DC4E4
+active_border_color             #1C4642
+inactive_border_color           #1D202B
+bell_border_color               #1D202B
+visual_bell_color               #1D202B
 
-# The 16 terminal colors
 
-# black
-color0 #494D64
-color8 #5B6078
+wayland_titlebar_color          #0F101B
+# macos_titlebar_color            #0F101B
 
-# red
-color1 #ED8796
-color9 #ED8796
 
-# green
-color2  #A6DA95
-color10 #A6DA95
+active_tab_foreground           #C6DFEC
+active_tab_background           #1D202B
+inactive_tab_foreground         #656771
+inactive_tab_background         #0F101B
+tab_bar_background              #0F101B
+tab_bar_margin_color            #1C4642
 
-# yellow
-color3  #EED49F
-color11 #EED49F
 
-# blue
-color4  #8AADF4
-color12 #8AADF4
+mark1_foreground #060914
+mark1_background #67BBB9
 
-# magenta
-color5  #F5BDE6
-color13 #F5BDE6
+mark2_foreground #060914
+mark2_background #8CB167
 
-# cyan
-color6  #8BD5CA
-color14 #8BD5CA
+mark3_foreground #060914
+mark3_background #BB5D7D
 
-# white
-color7  #B8C0E0
-color15 #A5ADCB
+
+color0 		#0F1015
+color1 		#a34242
+color2 		#768f57
+color3 		#b17435
+color4 		#4a6c9b
+color5 		#9f4765
+color6 		#509695
+color7 		#878996
+color8 		#343742
+color9 		#cc7066
+color10		#99ba78
+color11		#caa868
+color12		#6b8ac7
+color13		#c36f8b
+color14		#79c3c1
+color15		#cbcdd6
