install tmux-session-popup

--- a/config/tmux/keybind.conf
+++ b/config/tmux/keybind.conf
@@ -54,8 +54,9 @@ bind -n C-M-s split-window -v
 
 bind -n C-M-f resize-pane -Z
 bind -n C-M-a resize-pane -Z
-bind -n C-M-"'" switch-client -n
-bind -n C-M-";" switch-client -p
+#
+# bind -n C-M-"'" switch-client -n
+# bind -n C-M-";" switch-client -p
 
 # ------------------------------------------------------------------------------------------
 #  pane management
