--- a/config/tmux/plugin.conf
+++ b/config/tmux/plugin.conf
@@ -14,8 +14,12 @@ set -g @tmux-window-switcher-height '90%'
 
 
 set -g @plugin 'b0o/tmux-autoreload'
-
-set -g @plugin 'meithon/tmux-panehop'
+set -g @plugin 'meithon/tmux-session-popup'
+set -g @session_switcher_widget_mode dots
+set -g @session_switcher_next_key C-M-"'"
+set -g @session_switcher_prev_key C-M-"\\;"
+set -g @session_status_mode dots
+set -g status-right "#{@session_status_format} | %H:%M"
 
 # ------------------------------------------------------------------------------------------
 #  extract text from the terminal
@@ -45,11 +49,12 @@ set -g @plugin 'meithon/tmux-panehop'
 # set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
 # set -g @treemux-tree 'e'
 
+
 # ------------------------------------------------------------------------------------------
 #  pick screen url, commit, digetst, etc
 # ------------------------------------------------------------------------------------------
-set -g @plugin 'Morantron/tmux-fingers'
-set -g @fingers-key F
+# set -g @plugin 'Morantron/tmux-fingers'
+# set -g @fingers-key F
 
 # set -g @plugin 'pawel-wiejacha/tmux-picker'
 # set -g PICKER_KEY 'F'
@@ -123,7 +128,7 @@ set-option -g @tmux-autoreload-entrypoints '~/.tmux.conf'
 #  Theme
 # ------------------------------------------------------------------------------------------
 set -g @plugin 'catppuccin/tmux'
-run ~/.tmux/plugins/tmux/catppuccin.tmux
+# run ~/.tmux/plugins/tmux/catppuccin.tmux
 # set -g @catppuccin_flavour 'macchiato' # latte, frappe, macchiato, mocha
 # set -g @catppuccin_window_left_separator "█"
 # set -g @catppuccin_window_right_separator " "
