--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,17 +1,15 @@
 source-file ~/.config/tmux/option.conf
 source-file ~/.config/tmux/keybind.conf
-source-file ~/.config/tmux/plugin.conf
 source-file ~/.config/tmux/89iuv.conf
+source-file ~/.config/tmux/plugin.conf
 #
 
-set -g status-right ""
-set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
-set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
-set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
-set -ga status-right "#[bg=#{@jhm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+# set -g status-right ""
+# set -ga status-right "#{?#{e|>=:10,#{battery_percentage}},#{#[bg=#{@thm_red},fg=#{@thm_bg}]},#{#[bg=#{@thm_bg},fg=#{@thm_pink}]}} #{battery_icon} #{battery_percentage} "
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+# set -ga status-right "#[bg=#{@thm_bg}]#{?#{==:#{online_status},ok},#[fg=#{@thm_mauve}] 󰖩 on ,#[fg=#{@thm_red},bold]#[reverse] 󰖪 off }"
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
+# set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+# set -ga status-right "#[bg=#{@jhm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
+#
 
-
-set -g @session_widget_path "/Users/mei/workspace/private/tools/tmux-session-popup/bin/tmux-session-widget"
-set -g status-right "#(#{@session_widget_path} dots) %H:%M"
