--- a/config/tmux/plugin.conf
+++ b/config/tmux/plugin.conf
@@ -19,7 +19,7 @@ set -g @session_switcher_widget_mode dots
 set -g @session_switcher_next_key C-M-"'"
 set -g @session_switcher_prev_key C-M-"\\;"
 set -g @session_status_mode dots
-set -g status-right "#{@session_status_format} | %H:%M"
+# set -g status-right "#{b:pane_current_path} | #{@session_status_format} | %H:%M"
 
 # ------------------------------------------------------------------------------------------
 #  extract text from the terminal
@@ -142,19 +142,6 @@ set -g status-right-length 100
 # set -ag status-right "#{E:@catppuccin_status_session}"
 # set -ag status-right "#{E:@catppuccin_status_uptime}"
 # set -agF status-right "#{E:@catppuccin_status_battery}"
-
-
-
-
-
-
-
-
-
-set -g @session_widget_path "/Users/mei/workspace/private/tools/tmux-session-popup/bin/tmux-session-widget"
-set -g status-right "#(#{@session_widget_path} dots) %H:%M"
-
-
 
 set -g @plugin 'l-lin/tmux-window-switcher'
 
