--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,5 +11,8 @@ source-file ~/.config/tmux/plugin.conf
 # set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_overlay_0}, none]│"
 # set -ga status-right "#[bg=#{@thm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
 # set -ga status-right "#[bg=#{@jhm_bg},fg=#{@thm_blue}] 󰭦 %Y-%m-%d 󰅐 %H:%M "
-#
 
+set -g status-right ""
+set -ga status-right " #{=/-32/...:#{s|$USER|~|:#{b:pane_current_path}}}"
+set -ga status-right " #(#{@session_widget_path} dots)"
+set -ga status-right " %H:%M"
